fix: broken styles

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,6 +1,6 @@
 .app {
-    max-width: 1440px;
+    // max-width: 1440px;
     display: flex;
+    font-family: 'Josefin Sans', sans-serif;
 
 }
-
